--- a/package.json
+++ b/package.json
@@ -8,16 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase": "^12.4.0",
+    "leaflet": "^1.9.4",
+    "leaflet-gpx": "^2.2.0",
+    "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/react-leaflet": "^3.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
